# buterBot

buterBot/: .gitignore  README.md  pyproject.toml
buterBot/buterbot/: README.md  bot.py  config.py  message_texts.py
ex.14.3/: crud_majors.py
intensive/: bot.py  pyproject.toml
